# python-project-lvl1

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: github-actions.yml  pylint.yml
brain_games/: engine.py  game_template.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_game.py  brain_gcd.py  brain_prime.py  brain_progression.py  greeting.py
