[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games - пять игр для вашего мозга"
authors = ["Alina Solovyeva <akilina.vsk@gmail.com>"]
repository = "https://github.com/aki1ina/python-project-lvl1"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable"
    "Natural Language :: English"
    "Operating System :: MacOS"
    "Programming Language :: Python :: 3"
    "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_game:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"